Fixed about spacing and organization and layout

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #FCF5E5; /* Parchment: #FCF5E5  Inverse: #030A1A */
+	background-color: #F3E8D8; /* Parchment: #F3E8D8  Inverse: #030A1A */
 	
 	font-family: monospace;
 	font-size: 1.25em;
@@ -55,8 +55,17 @@ h2 {
 	text-align: center;
 }
 
+h3 {
+	font-size: 3em;
+}
+
 p {
 	text-indent: 4em;
+}
+
+h4 {
+	font-size: 1em;
+	font-weight: normal;
 }
 
 img {
@@ -65,8 +74,17 @@ img {
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.image-text {
+.image-text-horizontal {
 	display: flex;
 	flex-direction: row;
+	align-items: center;
 	gap: 10%;
+}
+
+.image-text-vertical {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 10%;
+	width: 33%;
 }
